--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       align-self: center;
       align-items: center;
       font-family: "Red Hat Display", sans-serif;
-      background-image: url(./images/pattern-background-desktop.svg);
+      background-image: url(./pattern-background-desktop.svg);
       background-repeat: repeat-x;
       background-color: hsl(225, 100%, 94%);
     }
@@ -174,7 +174,7 @@
       align-self: center;
       align-items: center;
       font-family: "Red Hat Display", sans-serif;
-      background-image: url(./images/pattern-background-mobile.svg);
+      background-image: url(./pattern-background-mobile.svg);
       background-repeat: no-repeat;
       background-color: hsl(225, 100%, 94%);
     }
@@ -307,7 +307,7 @@
 
 <body>
   <div class="container">
-    <div class="image"><img src="./images/illustration-hero.svg" /></div>
+    <div class="image"><img src="./illustration-hero.svg" /></div>
     <div class="text-container">
 
       <div class="order-summary">
@@ -322,7 +322,7 @@
 
 
       <div class="plan">
-        <div class="tune-icon"> <img src="./images/icon-music.svg" /></div>
+        <div class="tune-icon"> <img src="./icon-music.svg" /></div>
         <div class="plan-spec">
           <p class="plan-name">Annual Plan</p>
           <p class="plan-price">$59.99/year</p>
